add statistical test notebook

--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ joblib = "==1.4.2"
 lightgbm = "==4.4.0"
 scipy = "==1.14.0"
 ipykernel = "*"
+statsmodels = "*"
 
 [dev-packages]
 ipykernel = "==6.29.4"
